// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-axe readme first readme example should demonstrate this matcher\`s usage 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toHaveNoViolations([22m[32mexpected[39m[2m)[22m

Expected the HTML found at $('img') to have no violations:

<img src=\\"#\\">

Received:

[31m\\"Images must have alternate text (image-alt)\\"[39m

Try fixing it with this help: https://dequeuniversity.com/rules/axe/3.0/image-alt?application=axeAPI"
`;

exports[`jest-axe readme readme react example renders correctly 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toHaveNoViolations([22m[32mexpected[39m[2m)[22m

Expected the HTML found at $('img') to have no violations:

<img src=\\"#\\" data-reactroot=\\"\\">

Received:

[31m\\"Images must have alternate text (image-alt)\\"[39m

Try fixing it with this help: https://dequeuniversity.com/rules/axe/3.0/image-alt?application=axeAPI"
`;

exports[`jest-axe toHaveNoViolations returns correctly formatted message when violations are present 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toHaveNoViolations([22m[32mexpected[39m[2m)[22m

Expected the HTML found at $('body > img') to have no violations:

<img src=\\"\\">

Received:

[31m\\"Images must have alternate text (image-alt)\\"[39m

Try fixing it with this help: https://dequeuniversity.com/rules/axe/2.6/image-alt?application=axeAPI"
`;

exports[`jest-axe toHaveNoViolations returns properly formatted text with more complex example 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toHaveNoViolations([22m[32mexpected[39m[2m)[22m

Expected the HTML found at $('img[src$=\\"example.com\\"]') to have no violations:

<img src=\\"http://example.com\\">

Expected the HTML found at $('img[src=\\"http://example.com/2\\"]') to have no violations:

<img src=\\"http://example.com/2\\">

Received:

[31m\\"Images must have alternate text (image-alt)\\"[39m

Try fixing it with this help: https://dequeuniversity.com/rules/axe/3.0/image-alt?application=axeAPI

────────

Expected the HTML found at $('input') to have no violations:

<input type=\\"text\\">

Received:

[31m\\"Form elements must have labels (label)\\"[39m

Try fixing it with this help: https://dequeuniversity.com/rules/axe/3.0/label?application=axeAPI

────────

Expected the HTML found at $('a[href$=\\"#link-name\\"]') to have no violations:

<a href=\\"#link-name\\"></a>

Expected the HTML found at $('a[href$=\\"#link-name-2\\"]') to have no violations:

<a href=\\"#link-name-2\\"></a>

Received:

[31m\\"Links must have discernible text (link-name)\\"[39m

Try fixing it with this help: https://dequeuniversity.com/rules/axe/3.0/link-name?application=axeAPI

────────

Expected the HTML found at $('a[href$=\\"#link-name\\"]') to have no violations:

<a href=\\"#link-name\\"></a>

Expected the HTML found at $('a[href$=\\"#link-name-2\\"]') to have no violations:

<a href=\\"#link-name-2\\"></a>

Received:

[31m\\"The skip-link target should exist and be focusable (skip-link)\\"[39m

Try fixing it with this help: https://dequeuniversity.com/rules/axe/3.0/skip-link?application=axeAPI"
`;
